# auditX

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  re-publish.md
AuditTrailX/: logging_core.py
auditx/: __init__.py  __main__.py  core.py  fastapi.py
auditx/web/: __init__.py  bridge.py  hub.py  reader.py  server.py
auditx/web/static/: index.html
examples/: basic_usage.py  fastapi_usage.py
test_logs/: audit.jsonl
