[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditX"
version = "0.9.1"
description = "ERP-grade audit logging with optional web dashboard for trading and service businesses"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "auditX" }]
keywords = ["audit", "logging", "erp", "compliance", "trading", "inventory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Office/Business",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = ["build", "twine"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.23"]

[project.scripts]
auditx-demo = "auditx.__main__:main"
auditx-ui = "auditx.web.server:main"

[project.urls]
Homepage = "https://github.com/auditX/auditX"
Documentation = "https://github.com/auditX/auditX#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["auditx*"]

[tool.setuptools.package-data]
auditx = ["web/static/*"]
